# prelude

./: .gitignore  init_bash.sh
core/: prelude-editor.el
irony/: cdb-json-projects
personal/: 00-packages.el  01-prelude-modules.el  100-mac-wheel-mouse.el  99-init.el
personal/customizations/: setup-orgmode.el
personal/extras/cmake/student/: .dir-locals.el  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
personal/extras/cmake/student/include/: Person.h  Student.h  Teacher.h
personal/extras/cmake/student/src/: .gdbinit  Person.cpp  Student.cpp  Teacher.cpp  mainapp.cpp
personal/my-lib/: support-functions.el
personal/scripts/: install.sh  notes.txt
personal/themes/: my-tabbar-style.el
